# gep

./: .gitignore  README.md  Readme.md  pyrightconfig.json  requirements.txt  setup.py
server/: Dockerfile  compose.yml  pyproject.toml  requirements.txt
server/examples/: faiss_openai.py
server/scripts/: win_build.py
server/src/: main.py
server/src/cmd/: __init__.py  command.py
server/src/cmd/commands/: embed.py  md.py
server/src/command/: __init__.py  command.py
server/src/command/commands/: __init__.py  api_key.py  base.py  cli.py  init_proj.py  options.py  project.py  repo.py
server/src/command/internal/: md.py  options.py
server/src/config/: __init__.py  api.py  configs.py  project.py
server/src/file_utils/: __init__.py  f.py
server/src/git_repo/commit/: __init__.py  analyzer.py  history.py  (+1 more)
server/src/github/: __init__.py  config.py  file.py  internal.py  manager.py
server/src/llm/: __init__.py  llm.py
server/src/logger/: __init__.py  logger.py
server/src/logs/: __init__.py  decor.py  setup.py
server/src/project/: __init__.py  docs.py  extensions.py  loader.py  models.py  pattern_matcher.py  proj.py  scan.py
server/src/prompt/: __init__.py  semantic.py  utils.py
server/src/query/: __init__.py  query.py
server/src/vector/: file.py  vector.py
server/src/vectorstores/: __init__.py  base.py  config.py  faiss_store.py  search_analyzer.py
server/src/watcher/: __init__.py  ignore.py  watcher.py
server/src/web/: app.py  routes.py
server/tests/: conftest.py  test_configs.py  test_embedding.py  test_project.py  test_watcher.py
(+106 files in other folders)
