[tool.poetry]
name = "gep"
version = "0.1.0"
description = ""
authors = ["\"Utkarsh Priydarashi\""]
readme = "README.md"

packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "2.0.36"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
python-dotenv = "1.0.1"
httpx = "0.28.1"
aiohttp = "3.11.10"
langchain = "0.3.11"
langchain-openai = "0.2.12"
openai = "1.57.3"
pandas = "2.2.3"
numpy = "2.2.0"
python-dateutil = "2.9.0.post0"
tiktoken = "0.8.0"
uvicorn = "^0.34.0"
gitpython = "^3.1.44"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.25.0"
ipython = "8.30.0"
ipykernel = "6.29.5"
jupyter = "^1.0.0"
jupyterlab = "4.3.4"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
ruff = "^0.3.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]          
testpaths = ["tests"]  